src/index.scss
@import "../node_modules/reset-css/_reset";
@import "./colors";
@import "./fonts";
@import "./transitions";

body {
    @include type-body();
    margin: 4vw auto;
    // You should be able to read the line with eye movement only (no head movement).
    max-width: 38em;
    @include responsive(margin-left, 3em, auto, auto);
    @include responsive(margin-right, 3em, auto, auto);        
    color: $color-text;
    background: $color-background;
}

cite {
    @include font-serif-regular();
    @include responsive(font-size, .7em, .75em, .8em);
    @include responsive(line-height, 1, 1, 1);
}

h1 {
    @include type-h1();
    margin: 0;
}

h1, h2, h3, h4, h5, h6 {
    @include font-serif-regular();
}

p, span, dd, dt, blockquote {
    @include type-p();
}

strong {
    @include font-weight-bold();
}

ul, ol {
    list-style: none;
    padding: 0;
}

a {
    text-decoration: none;
    color: $color-link;
    &::before {
        opacity: 0;
        transition: transform $transition-function, opacity $transition-function;
        content: "→\00a0";
        position: absolute;
        transform: translateX(calc(-100% - 0.2em));
    }
    &:hover {        
        &::before {
            opacity: 1;
            transform: translateX(-100%);
        }
    }
}

